syntax = "proto3";

package pb;

option go_package = "internal/infrastructure/pb";

import "proto/utils.proto";

message Patient {
  uint64 ID = 1;
  string name = 2;
  pb.Date birthdate = 3;
  string avatar = 4;
  string sex = 5;
  string status = 6;
}

message CreatePatientRequest {
  string name = 1;
  pb.Date birthdate = 2;
  string avatar = 3;
  string sex = 4;
}

message NewPatientSessionRequest {
  string IP = 1;
  string deviceID = 2;
}

message LogoutPatientRequest {

}

message Session {

}

message GetHelpRequest {

}

message FindPatientByIDRequest {
  uint64 ID = 1;
}

message UpdatePatientRequest {
  uint64 patientID = 1;
  string name = 2;
  pb.Date birthdate = 3;
  string avatar = 4;
  string sex = 5;
}

message DeletePatientRequest {
  uint64 ID = 1;
}

service PatientService {
  rpc Create(CreatePatientRequest) returns (Patient);
  rpc FindById(FindPatientByIDRequest) returns (Patient);
  rpc Update(UpdatePatientRequest) returns (pb.Blank);
  rpc Delete(DeletePatientRequest) returns (pb.Blank);
  rpc NewSession(NewPatientSessionRequest) returns (stream Session);
  rpc Logout(LogoutPatientRequest) returns (pb.Blank);
  rpc GetHelp(GetHelpRequest) returns (pb.Blank);
}